--- a/src/styles/cupon.module.css
+++ b/src/styles/cupon.module.css
@@ -112,13 +112,13 @@
     padding: 0 5px;
     & .textoLegal{
         display: inline-block;
-        transform: rotate(90deg);
+        transform: rotate(270deg);
         transform-origin: left center;
         font-size: 9px;
         position: absolute;
         width: 200px;
         left: 0;
-        top: 0;
+        top: 190px;
         margin-left: 5px;
     }
   }
