--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,3 +1,7 @@
 .contenedor{
+    /* background-color: red; */
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
