--- a/src/styles/formulario.module.css
+++ b/src/styles/formulario.module.css
@@ -1,14 +1,45 @@
 .contenedor{
-    width: 20%;
-    height: 100%;
-    background-color: blue;
+    max-width: 400px;
+    width: 100%;
+    height: 100vh;
+    background-color: #eeeeee;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    top: 0;
+    padding: 0 10px;
+    
     & .innerContainer{
-        background-color: green;
+        text-align: center;
+        width: 80%;
+        text-align: left;
+        
+        & form{
+            
+        }
+        & .tituloInput{
+            font-weight: bold;
+            font-size: 11px;
+            text-transform: uppercase;
+            margin-top: 10px;
+        }
+        & .textoInput{
+            font-weight: normal;
+            font-size: 13px;
+            color: #707070;
+            margin-bottom: 3px;
+        }
+        & .inputDivide{
+            display: flex;
+            gap: 10px;
+        }
+        & input{
+            width: 100%;
+            padding: 10px 0 10px 10px; 
+            border-radius: 4px;
+            border: 1px solid #c2c2c2;
+            margin: 3px 0;
+            box-sizing: border-box;
+        }
     }
 }
