--- a/src/styles/grilla.module.css
+++ b/src/styles/grilla.module.css
@@ -4,10 +4,8 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 10px;
-    width: 80%;
-    /* max-width: 1280px; */
-    background-color: red;
-    height: 100%;
-    margin-left: 20%;
+    width: 100%;
+    max-width: 1280px;
     padding: 20px 0;
+    
 }
