--- a/src/styles/formulario.module.css
+++ b/src/styles/formulario.module.css
@@ -1,22 +1,19 @@
 .contenedor{
     max-width: 400px;
     width: 100%;
-    height: 100vh;
-    background-color: #f6f8fa;
-    border-right: #e3e8ed 1px solid;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0 10px;
-    
+    text-align: center;
     & .innerContainer{
-        text-align: center;
-        width: 80%;
+        width: 100%;
         text-align: left;
-        
+        background-color: #eaf4f4;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        padding: 50px 0;
         & form{
-            
+            width: 80%;
         }
         & .tituloInput{
             font-weight: bold;
@@ -34,6 +31,25 @@
             display: flex;
             gap: 10px;
         }
+        & .inputCheckOU{
+            display: inline-flex;
+            margin-right: 10px;
+            gap: 5px;
+        }
+        & .selectCheck{
+            font-size: 13px;
+            display: inline-block;
+        }
+        & .inputDivideCheck{
+            display: flex;
+            gap: 20px;
+            margin-top: 25px;
+            & .inputCheck{
+                width: auto;
+                margin-right: 10px;
+            }
+        }
+        
         & .inputFecha{
             display: flex;
             gap: 5px;
@@ -45,6 +61,7 @@
                 background-color: #eaedf0;
             }
         }
+
         & input{
             width: 100%;
             padding: 10px 0 10px 10px; 
@@ -52,6 +69,22 @@
             border: 1px solid #c2c2c2;
             margin: 3px 0;
             box-sizing: border-box;
+        }
+    }
+    & .btnDescargar{
+        width: 90%;
+        height: 50px;
+        margin-top: 30px;
+        background-color: #6b9080;
+        color: #f6fff8;
+        text-transform: uppercase;
+        font-size: 15px;
+        font-weight: bold;
+        &:hover{
+            background-color: #506c5f;
+            color: #f6fff8;
+            border: none;
+            height: 50px
         }
     }
 }
