--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -2,6 +2,10 @@
     /* background-color: red; */
     width: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    height: 90vh;
+    background-color: white;
+    overflow-y: auto;
+    padding: 20px 0;
 }
