--- a/src/styles/formulario.module.css
+++ b/src/styles/formulario.module.css
@@ -11,7 +11,36 @@
         justify-content: center;
         align-items: center;
         border-radius: 5px;
-        padding: 50px 0;
+        padding: 10px 0;
+        & .tituloFormulario{
+            width: 80%;
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            /* background-color: #d8e6e6; */
+            /* border-radius: 5px; */
+            padding: 10px 0;
+            margin: 15px 0;
+            border-bottom: solid 1px #6b9080;
+            & .iconTitulo{
+                color: #6b9080;
+                font-size: 20px;
+            }
+            & .lineDivisor{
+                height: 27px;
+                border: solid #6b9080 1px;
+                margin: 0 10px;
+            }
+            & h2{
+                text-align: left;
+                font-size: 30px;
+                font-weight: 700;
+                text-transform: uppercase;
+                color: #6b9080;
+                /* color:#2a3d35; */
+                margin: 0;
+            }
+        }
         & form{
             width: 80%;
         }
@@ -100,6 +129,7 @@
         text-transform: uppercase;
         font-size: 15px;
         font-weight: bold;
+        border: none;
         &:hover{
             background-color: #506c5f;
             color: #f6fff8;
